[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "disasters"
version = "0.1.0"
description = "OPERA disaster products pipeline built on next_pass outputs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Your Name", email = "you@example.com" }
]

dependencies = [
  "click>=8.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "xarray>=2023.1.0",
  "rioxarray>=0.15.0",
  "rasterio>=1.3.0",
  "boto3>=1.26.0",
  "earthaccess>=0.7.0",
  "pygmt>=0.11.0",
  "opera-utils",          # if this is an internal package, you can vendor or edit as needed
  "next-pass",            # or whatever the installable name of your next_pass package is
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
disasters = "disasters.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/disasters"]
